# s13-19-m-python

./: README.md
backend/: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
backend/apps/menu/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/menu/migrations/: 0001_initial.py  0002_user_created_at.py  0003_alter_table_name_alter_user_created_at.py  0004_rename_table_user_table_id.py  0005_rename_table_id_user_table.py
backend/apps/orders/: __init__.py  admin.py  models.py  routers.py  serializers.py  signals.py  urls.py  views.py  viewsets.py
backend/apps/orders/migrations/: 0001_initial.py  0002_orderuser_created_at_orderuser_is_paid_and_more.py  0002_orderuser_products.py  0002_rename_products_orderproducts_product.py  0003_alter_orderuser_created_at.py  0003_orderuser_products_productorderuser_product_id.py  0003_rename_order_user_orderproducts_order_user_id.py  0004_alter_orderuser_id.py  0005_alter_orderuser_id.py
backend/apps/payments/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/payments/migrations/: 0001_initial.py  0002_remove_payment_order_id_payment_orders.py
backend/apps/products/: admin.py  models.py  routers.py  serializers.py  viewsets.py
backend/apps/products/migrations/: 0001_initial.py  0002_product_categories_alter_product_image.py  0003_alter_product_image.py
backend/apps/reception/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/reviews/: models.py  urls.py  views.py
backend/restaurant/: settings.py  urls.py
(+106 files in other folders)
